--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2096,4 +2096,6 @@ body #menu-head.menu/*, body #nav-panel*/{
 	transform: rotate(-135deg);
 	background: #bbb;
 }
- 
+.ui-fixed-hidden{
+    position:unset;
+}
